# smatrix

./: Cargo.toml  README.md
src/user_type/: camera.rs  determinant.rs  matrix.rs  mod.rs  object_buffer.rs  object_loader.rs  output_buffer.rs  position.rs  render_object.rs  state.rs  texture.rs  triangle.rs  vector.rs
