[package]
name = "smatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
winit = "0.27"
pixels = "*"
winit_input_helper = "0.13"
tobj = "3.2.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[[bin]]
name = "test"


[[bin]]
name = "test_pixels"


[[bin]]
name = "test_parse_obj"
